# mini-cnn-runtime

./: .gitignore  CMakeLists.txt  Layer.cpp  Layer.h  Makefile  OpenCLRuntime.cpp  OpenCLRuntime.h  Utility.h  Variable.cpp  Variable.h  kernel-dummy.cl  kernel.cl  main.cpp  mnist.onnx  onnx.proto3.pb.cc  onnx.proto3.pb.h  test.cpp
